syntax = "proto3";

import "github.com/gogo/protobuf@v1.3.1/gogoproto/gogo.proto";

package sensu.core.v2;

option go_package = "v2";
option (gogoproto.populate_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.testgen_all) = true;

// ResourceReference represents a reference to another resource.
//sensu:nogen
message ResourceReference {
  // Name is the name of the resource to reference.
  string Name = 1 [ (gogoproto.jsontag) = "name", (gogoproto.moretags) = "yaml: \"name\"" ];

  // Type is the name of the data type of the resource to reference.
  string Type = 2 [ (gogoproto.jsontag) = "type", (gogoproto.moretags) = "yaml: \"type\"" ];

  // APIVersion is the API version of the resource to reference.
  string APIVersion = 3 [ (gogoproto.jsontag) = "api_version", (gogoproto.moretags) = "yaml: \"api_version\"" ];
}
